[package]
name = "abiprobe"
version = "0.1.0"
edition = "2021"

[dependencies]
fuels = "0.62.0"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3.18"
